refacto: Stream API call chain can be simplified