@@ -33,7 +33,6 @@ import java.util.Collection;
 import java.util.Date;
 import java.util.Deque;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -348,8 +347,7 @@ public class LocalDateHelper {
     }
 
     Deque<LocalDateInterval> mergedIntervals = new ArrayDeque<>();
-    List<LocalDateInterval> sortedIntervals =
-        intervals.stream().sorted().collect(Collectors.toList());
+    List<LocalDateInterval> sortedIntervals = intervals.stream().sorted().toList();
 
     for (LocalDateInterval interval : sortedIntervals) {
       if (mergedIntervals.isEmpty()) {
